fix text alignment on mobile version

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -214,7 +214,7 @@ input {
     .hero-section-content {
         font-size: 15px;
         line-height: 25px;
-        max-width: 100%;
+        width: 100%;
         text-align: center;
         order: 2;
     }
